Iko: bugfixes