@@ -25,33 +25,7 @@ test {
     }
 }
 
-tasks.register("testParallel") {
-    description = "Run tests in parallel (beta)"
-    group = 'verification'
-    dependsOn cleanTest
-
-    testLogging {
-        events("passed", "skipped", "failed", "standardError")
-    }
-    useJUnitPlatform {
-        excludeTags "security", "integration"
-    }
-
-    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
-
-    systemProperties = Map.of(
-        "junit.jupiter.execution.parallel.enabled", "true",
-        "junit.jupiter.execution.parallel.mode.default", "concurrent",
-        "junit.jupiter.execution.parallel.mode.classes.default", "concurrent",
-        "junit.jupiter.execution.parallel.config.strategy", "dynamic"
-    )
-
-    outputs.upToDateWhen { false }
-    outputs.cacheIf { false }
-}
-
 tasks.register("integrationTesting") {
-    group = 'verification'
     dependsOn("integrationTestingPostgresql")
 }
 
@@ -62,34 +36,6 @@ tasks.register("integrationTestingPostgresql", Test) {
         includeTags "integration"
         excludeTags "security"
     }
-
-    mustRunAfter check
-    outputs.upToDateWhen { false }
-    outputs.cacheIf { false }
-
-    doLast {
-        composeDownForced
-    }
-}
-
-tasks.register("integrationTestingPostgresqlParallel", Test) {
-    description = "Run Postgresql integration tests in parallel (beta)"
-    group = 'verification'
-    systemProperty("spring.profiles.include", "inttest,postgresql")
-    useJUnitPlatform {
-        includeTags "integration"
-        excludeTags "security"
-    }
-
-    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
-
-    systemProperties = Map.of(
-        "junit.jupiter.execution.parallel.enabled", "true",
-        "junit.jupiter.execution.parallel.mode.default", "concurrent",
-        "junit.jupiter.execution.parallel.mode.classes.default", "same_thread",
-        "junit.jupiter.execution.parallel.config.strategy", "dynamic"
-    )
-
     mustRunAfter check
     outputs.upToDateWhen { false }
     outputs.cacheIf { false }
@@ -106,33 +52,6 @@ tasks.register("integrationTestingMysql", Test) {
         includeTags "integration"
         excludeTags "security"
     }
-    mustRunAfter check
-    outputs.upToDateWhen { false }
-    outputs.cacheIf { false }
-
-    doLast {
-        composeDownForced
-    }
-}
-
-tasks.register("integrationTestingMysqlParallel", Test) {
-    description = "Run MySql integration tests in parallel (beta)"
-    group = 'verification'
-    systemProperty("spring.profiles.include", "inttest,mysql")
-    useJUnitPlatform {
-        includeTags "integration"
-        excludeTags "security"
-    }
-
-    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
-
-    systemProperties = Map.of(
-        "junit.jupiter.execution.parallel.enabled", "true",
-        "junit.jupiter.execution.parallel.mode.default", "concurrent",
-        "junit.jupiter.execution.parallel.mode.classes.default", "same_thread",
-        "junit.jupiter.execution.parallel.config.strategy", "dynamic"
-    )
-
     mustRunAfter check
     outputs.upToDateWhen { false }
     outputs.cacheIf { false }
